--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Level1Activity" />
+        <activity android:name=".Level2Activity" />
+        <activity android:name=".Level3Activity"></activity>
     </application>
 
 </manifest>
